# air_monitoring_system

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main/AWS/: aws.c  aws.h
main/BASIC/: appTask.c  appTask.h
main/CERT/: certificate.pem  certificate.pem.crt  private.pem.key
main/I2C/: i2cDriver.c  i2cDriver.h
main/INCLUDE/: common.h  config.h
main/LORA/: loradev.c  loradev.h
main/NEXTION/: nextion.c  nextion.h
main/NVS/: NVSDriver.c  NVSDriver.h
main/OTA/: ota.c  ota.h
main/SENSOR/: sensorRead.c  sensorRead.h  sgp30Driver.c  sgp30Driver.h  sgp30Read.c  sgp30Read.h
main/WIFI/: WiFiDriver.c  WiFiDriver.h
main/WS2812B/: ws2812B.h  ws2812b.c
